# task4/repo-stat/api/docs/swagger.json
@@ -75,10 +75,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
+                                "$ref": "#/definitions/repo-stat_api_internal_dto.SubscriptionResponse"
                             }
                         }
                     },
@@ -109,16 +106,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api_internal_controller_http.subscribeRequest"
+                            "$ref": "#/definitions/internal_controller_http.subscribeRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/repo-stat_api_internal_dto.SubscriptionResponse"
                         }
                     },
                     "400": {
@@ -220,7 +216,7 @@
         }
     },
     "definitions": {
-        "api_internal_controller_http.subscribeRequest": {
+        "internal_controller_http.subscribeRequest": {
             "type": "object",
             "properties": {
                 "url": {
@@ -249,6 +245,20 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "repo-stat_api_internal_dto.SubscriptionResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "repo": {
                     "type": "string"
                 }
             }
