# task4/repo-stat/subscriber/internal/adapter/postgres/models.go
@@ -1,0 +1,16 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package postgres
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Subscription struct {
+	ID        int32
+	Owner     string
+	Repo      string
+	CreatedAt pgtype.Timestamptz
+}
